[gd_scene load_steps=7 format=3 uid="uid://dcif8uanmvqx0"]

[ext_resource type="Script" path="res://scenes/game_elements/book_element.gd" id="1_7cvkj"]
[ext_resource type="PackedScene" uid="uid://bm7gnysf0ejgs" path="res://scenes/game_elements/book.tscn" id="1_pxhcd"]

[sub_resource type="Animation" id="Animation_gihwq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OpenButton:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Book:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Book:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("OpenButton:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(760, 984)]
}

[sub_resource type="Animation" id="Animation_2eyg5"]
resource_name = "close_book"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Book:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 1080)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OpenButton:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("OpenButton:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.25, 0.5),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(760, 1080), Vector2(760, 984)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Book:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}

[sub_resource type="Animation" id="Animation_0hi2q"]
resource_name = "open_book"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OpenButton:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Book:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Book:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0, 1080), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7xohu"]
_data = {
"RESET": SubResource("Animation_gihwq"),
"close_book": SubResource("Animation_2eyg5"),
"open_book": SubResource("Animation_0hi2q")
}

[node name="MainUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BookElement" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7cvkj")

[node name="OpenButton" type="Button" parent="BookElement"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 760.0
offset_top = 984.0
offset_right = 1160.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 0
text = "open book"

[node name="Book" parent="BookElement" instance=ExtResource("1_pxhcd")]
visible = false
layout_mode = 1
offset_right = 5760.0
offset_bottom = 3240.0
script = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="BookElement"]
libraries = {
"": SubResource("AnimationLibrary_7xohu")
}
autoplay = "RESET"

[connection signal="pressed" from="BookElement/OpenButton" to="BookElement" method="_on_open_button_pressed"]
[connection signal="pressed" from="BookElement/Book/CloseButton" to="BookElement" method="_on_close_button_pressed"]

[editable path="BookElement/Book"]
